# ai_assessments_platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  biome.jsonc  docker-compose.prod.yml  docker-compose.yml  package.json  turbo.json
.github/workflows/: ci.yml  deploy-api.yml  deploy-frontend.yml  deploy-vm.yml  release.yml
apps/api/: .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
apps/api/scripts/: apply_migrations.py  gen_schemas.py  gen_schemas.sh  seed_runners_assignment.py  seed_test_assignment.py
apps/api/src/ri_assessments_api/: auth.py  config.py  db.py  logging_config.py  main.py  worker.py
apps/api/src/ri_assessments_api/models/: __init__.py  admin.py  benchmarks.py  candidate.py  generator.py  interactive.py  public.py
apps/api/src/ri_assessments_api/prompts/: outline.py  questions.py  revision.py  scoring.py
apps/api/src/ri_assessments_api/routers/: __init__.py  admin.py  benchmarks.py  candidate.py  debug.py  generator.py  health.py  public.py  references.py  webhooks.py
apps/api/src/ri_assessments_api/services/: admin.py  assignments.py  attempts.py  benchmarks.py  code_runner.py  diagram_runner.py  e2b_sandbox.py  email.py  generator.py  integrity.py  n8n_runner.py  narrative_grader.py  notebook_export.py  notebook_runner.py  public_links.py  queue.py  randomizer.py  references.py  scoring.py  series.py  solver_runner.py  sql_runner.py  tokens.py
apps/api/tests/: conftest.py  test_email_templates.py  test_generator_stage2_validation.py  test_health.py  test_immutability.py  test_integrity_heartbeat_clamp.py  test_integrity_parity.py  test_interactive_validation.py  test_jwt_verification.py  test_magic_link_binding.py  test_n8n_ownership.py  test_pii_filter.py  test_publish_competency_gate.py  test_rate_limit_decorators.py  test_role_enforcement.py  test_schema_parity.py  test_scoring.py  test_scoring_queue_reliability.py  test_scoring_rescore_optimization.py  test_training_suggestions.py  test_webhook_svix.py
docs/: architecture.md
scripts/: check-boundaries.ts  check-copy.ts  check-env.sh  dev-all.sh  link-env.sh  prune-integrity-events.sh  setup-supabase.sh
specs/: brand.md  requirements.md
(+152 files in other folders)
